nft-market buy button too small fix

--- a/src/app/car/buy-nft/buy-nft.component.scss
+++ b/src/app/car/buy-nft/buy-nft.component.scss
@@ -320,8 +320,7 @@
       width: 100%;
       .buy {
         transition: 0.3s;
-        height: 100%;
-        width: 30%;
+        padding: 20px 140px;
         -webkit-transition: 0.3s;
         -moz-transition: 0.3s;
         -ms-transition: 0.3s;
@@ -500,6 +499,12 @@
               height: calc(100% - 2px);
             }
           }
+        }
+      }
+
+      .payment-buttons {
+        .buy {
+          padding: 18px 120px;
         }
       }
     }
@@ -737,7 +742,7 @@
       }
       .payment-buttons {
         .buy {
-          width: 40%;
+          padding: 14px 90px;
         }
       }
     }
@@ -784,6 +789,11 @@
             height: 12.5px;
             width: 12.5px;
           }
+        }
+      }
+      .payment-buttons {
+        .buy {
+          padding: 10px 60px;
         }
       }
     }
